kubernetes/apps/default/jellyfin/app/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      nodePort: 30096
      protocol: TCP
